...
    <string name="transfer_receiving_course">Receiving course file…</string>
    <string name="sign_in_title">Sign in</string>
    <string name="register_account_already">Already have an account?</string>
    <string name="login_dont_have_account">Don\'t have an account yet?</string>
    <string name="offline_register_confirm">Alternatively, you can register offline and start using the app. Then, you\'ll need to submit or transfer your user data later</string>
    <string name="register_offline">Register offline</string>
    <string name="field_required">This field cannot be empty</string>
    <string name="field_spaces_error">Cannot contain spaces</string>
    <string name="permissions.location.title">Access location</string>
    <string name="permissions.location.description">In new Android devices, this permission is needed to be able to pair with other devices using Bluetooth</string>
    <string name="points">points</string>
    <string name="last_year">last year</string>
    <string name="last_month">last month</string>
...
