<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/quiz_widget">

    <TextView
        android:id="@+id/quiz_progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <ScrollView
        android:id="@+id/quiz_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/quiz_question"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/question_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/question_image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/question_image_image"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="4dp" />

                <TextView
                    android:id="@+id/question_image_caption"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/SmallTextDark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/quiz_response_widget"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/mquiz_prev_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight=".5"
            android:text="@string/widget_quiz_prev"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mquiz_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight=".5"
            android:text="@string/widget_quiz_next"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>