...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/quiz_results_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textAppearance="@style/SectionHeader"
            android:textColor="@color/subtitle_bar_text_color"
...
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/quiz_exit_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/widget_quiz_continue"
                />
...
