...
    
    <string name="widget_quiz_next">Next &gt;&gt;</string>
    <string name="widget_quiz_prev">&lt;&lt; Prev</string>
    <string name="widget_quiz_getresults">Get Results</string>
    <string name="widget_quiz_noanswergiven">Please give an answer before moving to the next question</string>
    <string name="widget_quiz_progress">Question %1$d of %2$d</string>
 	<string name="widget_quiz_results_score">You scored: %1$.0f%%</string>
 	<string name="widget_quiz_results_restart">Retake this quiz</string>
 	<string name="widget_quiz_baseline_completed">Thank you for completing the pre-test. You can now continue to the course.</string>
 	<string name="widget_quiz_baseline_goto_course">Continue to course &gt;&gt;</string>
 	<string name="widget_quiz_image_caption">Press the image to view larger version</string>
 	<string name="widget_quiz_media_caption">Press the image to start the video</string>
 	<string name="widget_quiz_feedback_response_title">You answered: </string>
 	<string name="widget_quiz_feedback_feedback_title">Feedback: </string>
 	<string name="widget_quiz_unavailable_section">You must complete all the previous activities in this section before this quiz becomes available to you.</string>
 	<string name="widget_quiz_unavailable_course">You must complete all the previous activities in this course before this quiz becomes available to you.</string>
...
	<string name="no">No</string>
	<string name="close">Close</string>
	<string name="error">Error</string>
	<string name="info">Info</string>
	<string name="warning">Warning</string>
	<string name="loading">Loading</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="logout">Logout</string>
	<string name="feedback">Feedback</string>
	<string name="download">Download</string>
	<string name="downloaded">Downloaded</string>
	<string name="open">Open</string>
...
